parser/simplejava.java
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

/*****************************************
 * SimpleJava Language Grammar Starts Here
 *****************************************/
  static final public void program() throws ParseException {
    trace_call("program");
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
        case BOOLEAN:
        case VOID:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ClassDefinitions();
          break;
        case BOOLEAN:
        case VOID:
        case IDENTIFIER:
          FunctionDeclaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(0);
    } finally {
      trace_return("program");
    }
  }

  static final public void ClassDefinitions() throws ParseException {
    trace_call("ClassDefinitions");
    try {
      jj_consume_token(CLASS);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        VariableDeclarationStatement();
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("ClassDefinitions");
    }
  }

/*Two kinds of Function Declarations: FunctionProtoype or FunctionDefinition. */
  static final public void FunctionDeclaration() throws ParseException {
    trace_call("FunctionDeclaration");
    try {
      FunctionType();
      jj_consume_token(IDENTIFIER);
      FormalParameterList();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      case LBRACE:
        jj_consume_token(LBRACE);
        StatementList();
        jj_consume_token(RBRACE);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("FunctionDeclaration");
    }
  }

  static final public void FunctionType() throws ParseException {
    trace_call("FunctionType");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("FunctionType");
    }
  }

  static final public void VariableType() throws ParseException {
    trace_call("VariableType");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("VariableType");
    }
  }

// 5th Expression
  static final public void NewExpression() throws ParseException {
    trace_call("NewExpression");
    try {
      if (jj_2_1(3)) {
        jj_consume_token(NEW);
        VariableType();
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          jj_consume_token(NEW);
          VariableType();
          jj_consume_token(LBRACKET);
          Variable();
          jj_consume_token(RBRACKET);
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[6] = jj_gen;
              break label_3;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
          }
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("NewExpression");
    }
  }

  static final public void FormalParameterList() throws ParseException {
    trace_call("FormalParameterList");
    try {
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case IDENTIFIER:
        FormalParameter();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          FormalParameter();
        }
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } finally {
      trace_return("FormalParameterList");
    }
  }

  static final public void FormalParameter() throws ParseException {
    trace_call("FormalParameter");
    try {
      VariableType();
      Variable();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
    } finally {
      trace_return("FormalParameter");
    }
  }

  static final public void ExpressionList() throws ParseException {
    trace_call("ExpressionList");
    try {
      Expression();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        Expression();
      }
    } finally {
      trace_return("ExpressionList");
    }
  }

/* four VariableTypes of expression. */
  static final public void Expression() throws ParseException {
    trace_call("Expression");
    try {
      if (jj_2_2(3)) {
        FunctionCall();
      } else if (jj_2_3(2)) {
        CompleteOperatorExpression();
      } else if (jj_2_4(2)) {
        Variable();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case INTEGER_LITERAL:
          ConstantExpression();
          break;
        case NEW:
          NewExpression();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("Expression");
    }
  }

// First Expression.
  static final public void ConstantExpression() throws ParseException {
    trace_call("ConstantExpression");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      case TRUE:
        jj_consume_token(TRUE);
        break;
      case FALSE:
        jj_consume_token(FALSE);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ConstantExpression");
    }
  }

// Three kinds of variables. 
  static final public void Variable() throws ParseException {
    trace_call("Variable");
    try {
      if (jj_2_5(2)) {
        ArrayVariable();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          PrimitiveVariableTypeOrClassVariable();
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("Variable");
    }
  }

//TODO: Make sure the variable in [] is integer value. 
  static final public void ArrayVariable() throws ParseException {
    trace_call("ArrayVariable");
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        Variable();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(RBRACKET);
    } finally {
      trace_return("ArrayVariable");
    }
  }

  static final public void PrimitiveVariableTypeOrClassVariable() throws ParseException {
    trace_call("PrimitiveVariableTypeOrClassVariable");
    try {
      if (jj_2_6(2)) {
        jj_consume_token(IDENTIFIER);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PERIOD:
            ;
            break;
          default:
            jj_la1[16] = jj_gen;
            break label_7;
          }
          jj_consume_token(PERIOD);
          jj_consume_token(IDENTIFIER);
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case PERIOD:
              ;
              break;
            default:
              jj_la1[17] = jj_gen;
              break label_8;
            }
            jj_consume_token(PERIOD);
            ArrayVariable();
          }
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("PrimitiveVariableTypeOrClassVariable");
    }
  }

// TODO check this classvariable
// void ClassVariable():
// {}
// {
// 	<IDENTIFIER>
// }

// Three built-in function: readfunction,printfunction and printlnfunction.
  static final public void ReadFunctionCall() throws ParseException {
    trace_call("ReadFunctionCall");
    try {
      jj_consume_token(READ);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
    } finally {
      trace_return("ReadFunctionCall");
    }
  }

//TODO make sure print(int value)
  static final public void PrintFunctionCall() throws ParseException {
    trace_call("PrintFunctionCall");
    try {
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAREN);
    } finally {
      trace_return("PrintFunctionCall");
    }
  }

  static final public void PrintlnFunctionCall() throws ParseException {
    trace_call("PrintlnFunctionCall");
    try {
      jj_consume_token(PRINTLN);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
    } finally {
      trace_return("PrintlnFunctionCall");
    }
  }

  static final public void CustomizedFunctionCall() throws ParseException {
    trace_call("CustomizedFunctionCall");
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case NEW:
      case READ:
      case PRINT:
      case PRINTLN:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case MINUS:
      case LPAREN:
      case NOT:
        ExpressionList();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } finally {
      trace_return("CustomizedFunctionCall");
    }
  }

//Three built-in function and a customized function.
  static final public void FunctionCall() throws ParseException {
    trace_call("FunctionCall");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case READ:
        ReadFunctionCall();
        break;
      case PRINT:
        PrintFunctionCall();
        break;
      case PRINTLN:
        PrintlnFunctionCall();
        break;
      case IDENTIFIER:
        CustomizedFunctionCall();
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("FunctionCall");
    }
  }

//4th Expression



//The OperatorExpression
  static final public void CompleteOperatorExpression() throws ParseException {
    trace_call("CompleteOperatorExpression");
    try {
      AndExpression();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_9;
        }
        jj_consume_token(OR);
        AndExpression();
      }
    } finally {
      trace_return("CompleteOperatorExpression");
    }
  }

  static final public void AndExpression() throws ParseException {
    trace_call("AndExpression");
    try {
      NotExpression();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_10;
        }
        jj_consume_token(AND);
        NotExpression();
      }
    } finally {
      trace_return("AndExpression");
    }
  }

  static final public void NotExpression() throws ParseException {
    trace_call("NotExpression");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        jj_consume_token(NOT);
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      CompareExpression();
    } finally {
      trace_return("NotExpression");
    }
  }

  static final public void CompareExpression() throws ParseException {
    trace_call("CompareExpression");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
        jj_consume_token(TRUE);
        break;
      case FALSE:
        jj_consume_token(FALSE);
        break;
      case READ:
      case PRINT:
      case PRINTLN:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case MINUS:
      case LPAREN:
        MathExpression();
        label_11:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EQUALEQUAL:
          case NOTEQUALTO:
          case LESSTHAN:
          case LESSTHANOREQUALTO:
          case GREATERTHAN:
          case GREATERTHANOREQUALTO:
            ;
            break;
          default:
            jj_la1[25] = jj_gen;
            break label_11;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EQUALEQUAL:
            jj_consume_token(EQUALEQUAL);
            break;
          case NOTEQUALTO:
            jj_consume_token(NOTEQUALTO);
            break;
          case LESSTHAN:
            jj_consume_token(LESSTHAN);
            break;
          case LESSTHANOREQUALTO:
            jj_consume_token(LESSTHANOREQUALTO);
            break;
          case GREATERTHAN:
            jj_consume_token(GREATERTHAN);
            break;
          case GREATERTHANOREQUALTO:
            jj_consume_token(GREATERTHANOREQUALTO);
            break;
          default:
            jj_la1[26] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          MathExpression();
        }
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("CompareExpression");
    }
  }

  static final public void MathExpression() throws ParseException {
    trace_call("MathExpression");
    try {
      term();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_12;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          break;
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        term();
      }
    } finally {
      trace_return("MathExpression");
    }
  }

  static final public void term() throws ParseException {
    trace_call("term");
    try {
      factor();
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLY:
        case DIVIDE:
          ;
          break;
        default:
          jj_la1[30] = jj_gen;
          break label_13;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLY:
          jj_consume_token(MULTIPLY);
          break;
        case DIVIDE:
          jj_consume_token(DIVIDE);
          break;
        default:
          jj_la1[31] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        factor();
      }
    } finally {
      trace_return("term");
    }
  }

  static final public void factor() throws ParseException {
    trace_call("factor");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        jj_consume_token(MINUS);
        factor();
        break;
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      default:
        jj_la1[32] = jj_gen;
        if (jj_2_7(2)) {
          Variable();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAREN:
            jj_consume_token(LPAREN);
            Expression();
            jj_consume_token(RPAREN);
            break;
          case READ:
          case PRINT:
          case PRINTLN:
          case IDENTIFIER:
            FunctionCall();
            break;
          default:
            jj_la1[33] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("factor");
    }
  }

// zero or more statements.
  static final public void StatementList() throws ParseException {
    trace_call("StatementList");
    try {
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case IF:
        case WHILE:
        case DO:
        case BOOLEAN:
        case RETURN:
        case READ:
        case PRINT:
        case PRINTLN:
        case IDENTIFIER:
        case SEMICOLON:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[34] = jj_gen;
          break label_14;
        }
        Statement();
      }
    } finally {
      trace_return("StatementList");
    }
  }

// 11 kinds of statement
  static final public void Statement() throws ParseException {
    trace_call("Statement");
    try {
      if (jj_2_8(3)) {
        AssignmentStatement();
      } else if (jj_2_9(3)) {
        IncrementStatement();
      } else if (jj_2_10(3)) {
        VariableDeclarationStatement();
      } else if (jj_2_11(3)) {
        IfStatement();
      } else if (jj_2_12(3)) {
        DanglingIfElseStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
          WhileStatement();
          break;
        case DO:
          DoWhileStatement();
          break;
        case FOR:
          ForStatement();
          break;
        case READ:
        case PRINT:
        case PRINTLN:
        case IDENTIFIER:
          FunctionCallStatement();
          break;
        case RETURN:
          ReturnStatement();
          break;
        case SEMICOLON:
          EmptyStatement();
          break;
        case LBRACE:
          BlockStatement();
          break;
        default:
          jj_la1[35] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("Statement");
    }
  }

  static final public void AssignmentStatement() throws ParseException {
    trace_call("AssignmentStatement");
    try {
      Variable();
      jj_consume_token(GETS);
      Expression();
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("AssignmentStatement");
    }
  }

// TODO incrementstatement just like <variable>++ or <variable>-- 
  static final public void IncrementStatement() throws ParseException {
    trace_call("IncrementStatement");
    try {
      if (jj_2_13(3)) {
        Variable();
        jj_consume_token(PLUSPLUS);
      } else if (jj_2_14(3)) {
        Variable();
        jj_consume_token(MINUS);
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("IncrementStatement");
    }
  }

  static final public void VariableDeclarationStatement() throws ParseException {
    trace_call("VariableDeclarationStatement");
    try {
      VariableType();
      Variable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GETS:
        jj_consume_token(GETS);
        Expression();
        break;
      default:
        jj_la1[36] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("VariableDeclarationStatement");
    }
  }

  static final public void IfStatement() throws ParseException {
    trace_call("IfStatement");
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        Statement();
        break;
      default:
        jj_la1[37] = jj_gen;
        ;
      }
    } finally {
      trace_return("IfStatement");
    }
  }

  static final public void DanglingIfElseStatement() throws ParseException {
    trace_call("DanglingIfElseStatement");
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      jj_consume_token(LPAREN);
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
      jj_consume_token(ELSE);
      Statement();
      jj_consume_token(RBRACE);
    } finally {
      trace_return("DanglingIfElseStatement");
    }
  }

  static final public void WhileStatement() throws ParseException {
    trace_call("WhileStatement");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
    } finally {
      trace_return("WhileStatement");
    }
  }

  static final public void DoWhileStatement() throws ParseException {
    trace_call("DoWhileStatement");
    try {
      jj_consume_token(DO);
      Statement();
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("DoWhileStatement");
    }
  }

  static final public void ForStatement() throws ParseException {
    trace_call("ForStatement");
    try {
      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      ForInit();
      Expression();
      jj_consume_token(SEMICOLON);
      IncrementStatement();
      jj_consume_token(RPAREN);
      Statement();
    } finally {
      trace_return("ForStatement");
    }
  }

// TODO check ForInit can taek incremnet statement. 
  static final public void ForInit() throws ParseException {
    trace_call("ForInit");
    try {
      if (jj_2_15(3)) {
        VariableType();
        Variable();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          AssignmentStatement();
          break;
        case SEMICOLON:
          EmptyStatement();
          break;
        default:
          jj_la1[38] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("ForInit");
    }
  }
